oem-config (1.54.8) UNRELEASED; urgency=low

  * debconf frontend:
    - Fix typo: "oem-config/text/task_heading_label" should have been
      "oem-config/text/tasks_heading_label".
    - Explicitly stop our debconf frontend just before exiting, to avoid
      leaving a zombie if tasksel installs some package that starts a daemon
      that doesn't disconnect from fd 3.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 03 Mar 2009 15:01:02 +0000

oem-config (1.54.7) jaunty; urgency=low

  [ Evan Dandrea ]
  * Give the proper return value in the user component's run function
    (LP: #334281).

  [ Colin Watson ]
  * Automatic update of included source packages: localechooser 2.09ubuntu2,
    user-setup 1.23ubuntu14.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 01 Mar 2009 11:50:24 +0000

oem-config (1.54.6) jaunty; urgency=low

  * Only call setxkbmap if DISPLAY is set.
  * Don't show the "Who are you?" page just because the auto-login question
    is asked and not preseeded (LP: #328281).
  * Handle user-setup's new weak password detection.
  * Add forgotten oem-config/text/network_heading_label template.
  * Add a "tasks" component (only usable in the debconf frontend at the
    moment) that runs tasksel.
  * Check whether /usr/lib/network-manager/ifblacklist_migrate.sh exists
    before running it.
  * Fix copying of debian-installer/framebuffer to /target in
    oem-config-udeb: debconf-dumpdb returns "(null)" as the value if the
    question has never been set.
  * Automatic update of included source packages: user-setup 1.23ubuntu12.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 18 Feb 2009 23:38:31 +0000

oem-config (1.54.5) jaunty; urgency=low

  * Move most debconf-communicator handling into BaseFrontend, to make it
    easier to fetch configuration from debconf there.
  * Fetch the list of steps to be displayed from debconf (oem-config/steps).
  * Tell components' prepare method whether they're being run unfiltered, to